joos1syntax/test/pos/SimpleIf4.java
public class SimpleIf4 {
  public SimpleIf4() {
    if (true)
      if (false)
        ;
      else
        ;
    else
      ;
  }
}
