joos1syntax/test/neg/BadIf4.java
public class BadIf4 {
  public BadIf4() {
    if (true)
    else
      ;
  }
}
